styles/incubation.css
.outer-incubation-main {
    display: grid;
    grid-template-columns: 1fr 6fr 1fr;
    background-color: skyblue;
    background-image: url('../assets/hay-nest-aerial-opaque-cropped.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.inner-incubation-content {
    display: flex;
    min-height: 100vh;
    align-items: center;
    justify-content: space-evenly;
    margin: auto;
}

.incubation-title-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 2em;
    font-weight: bold;
    padding: 30px 0px 0px 0px;
}

.incubation-title {
    display: flex;
    justify-content: center;
    align-items: center;
}

.outer-dino-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

#dino-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 80vw;
    max-height: 360px;
    margin-bottom: 20px;
    font-size: 1em;
}


p {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hidden {
    display: none;
}

#species-chooser {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 0px 20px 0px;
    color: white;
    border: 2px solid black;
    background-color: rgba(28, 92, 22, 0.836);
    border-radius: 10px;
    padding: 5px 10px 5px 10px;
}

#species-choice {
    display: block;
    justify-content: center;
    align-items: center;
    font-size: 1em;
}

#species-input {
    display: block;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
}

#release-button-box {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 0px 20px 0px;
}

#release-button {
    background-color: rgb(0, 179, 0);
}

.left-spacing, .right-spacing {
    width: 200px;
}

footer {
    background-color: skyblue;
}

